--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><img src="./img/javascript.svg" alt="JavaScript"></li>
                 <li><img src="./img/typescript.svg" alt="TypeScript"></li>
                 <li><img src="./img/python.svg" alt="Python"></li>
-                <li><img src="./img/node-js.svg" alt="Node.js"></li>
+                <li><img src="./img/nodejs.svg" alt="Node.js"></li>
                 <li><img src="./img/css.svg" alt="CSS"></li>
                 <li><img src="./img/html.svg" alt="HTML"></li>
             </ul>
@@ -54,12 +54,6 @@
                     <img src="./img/street-fighter.png" alt="street-fighter">
                 </a>
                 <p>Este projeto foi desenvolvido como parte do treinamento das habilidades em JavaScript, CSS e HTML. Ele apresenta uma interface interativa para seleção de personagens do jogo Street Fighter, destacando o uso combinado dessas tecnologias para criar uma experiência visual e funcional.</p>
-            </div>
-            <div class="projeto">
-                <a href="https://alexiasantos.github.io/Calculadora-alexia/" target="_blank">
-                    <img src="./img/calculadora.png" alt="New-board Project">
-                </a>
-                <p>Esta calculadora foi desenvolvida com o objetivo de praticar e aprimorar habilidades na linguagem JavaScript, implementando operações matemáticas básicas.</p>
             </div>
         </section>
     </main>
